--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                     <h1 class="h1-count">17K</h1>
                     <p class="p-count">review</p>
                   </div>
+                  <img src="images/bg.svg">
 
                 <div class="sneaker-contain">
                   <div class="card1">
